--- a/features/detail/src/main/res/menu/detail_menu.xml
+++ b/features/detail/src/main/res/menu/detail_menu.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/star"
         android:icon="@drawable/ic_star"
-        app:showAsAction="always"
-        android:title="@string/favorite" />
+        android:title="@string/favorite"
+        app:showAsAction="always" />
 </menu>
